<resources>
    <string name="app_name">Daycare</string>
    <string name="child">Child</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="temperature">Temperature</string>
    <string name="id_number">ID Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="classLabel">Class</string>
    <string name="view_details">View Details</string>
    <string name="comment">Comment</string>
    <string name="subject">Subject</string>
    <string name="attachment">Attachment</string>
    <string name="download">Download</string>
    <string name="join_now">Join Now</string>
    <string name="repeated_at">Repeated At</string>
    <string name="title_activity_main">MainActivity</string>
</resources>