<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/cardViewForLists"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_marginStart="10dp"
            android:layout_width="@dimen/childImageSizeInChildrenList"
            android:layout_height="@dimen/childImageSizeInChildrenList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Angel Bednar Wuckert"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/icon" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TableRow>

                <TextView
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="@string/id_number" />

                <TextView
                    android:id="@+id/ID_number"
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="TextView2" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <TextView
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth" />

                <TextView
                    android:id="@+id/data_of_birth"
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="TextView2" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <TextView
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="@string/blood_group" />

                <TextView
                    android:id="@+id/blood_group"
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="TextView2" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <TextView
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="@string/classLabel" />

                <TextView
                    android:id="@+id/className"
                    style="@style/activitiesListItem"
                    android:layout_weight="1"
                    android:text="TextView2" />
            </TableRow>
            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <Button
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/viewDetailsButtonForChildrenMargin"
                    android:layout_marginEnd="@dimen/viewDetailsButtonForChildrenMargin"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/view_details"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>