<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    style="@style/cardViewForLists">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Fugiat et veritatis" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TableRow >

                <TextView
                    android:id="@+id/classLabel"
                    style="@style/activitiesListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/classLabel" />

                <TextView
                    android:id="@+id/className"
                    style="@style/activitiesListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/classLabel"
                    tools:text="KG1 - Group B" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <TextView
                    android:id="@+id/repeatedLabel"
                    style="@style/activitiesListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repeated_at" />

                <TextView
                    android:id="@+id/repeated"
                    style="@style/activitiesListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/classLabel"
                    tools:text="Drawing" />
            </TableRow>



            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <TextView
                    android:id="@+id/attachLabel"
                    style="@style/activitiesListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attachment" />

                <TextView
                    android:id="@+id/attach"
                    style="@style/activitiesListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/classLabel"
                    tools:text="3124124hhd55xe" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/childrenInfoMarginTop">

                <Button
                    android:id="@+id/download"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/downloadButtonForLearningMargin"
                    android:layout_marginEnd="@dimen/downloadButtonForLearningMargin"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/join_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>