<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="10dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_margin="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/activityChildTitle"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityItemMarginTop"
            android:text="@string/child"
            app:layout_constraintStart_toStartOf="@+id/imageCard"
            app:layout_constraintTop_toBottomOf="@+id/imageCard" />

        <TextView
            android:id="@+id/activityChildDesc"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/imageCard"
            app:layout_constraintTop_toTopOf="@+id/activityChildTitle" />

        <TextView
            android:id="@+id/activityTypeTitle"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityItemMarginTop"
            android:text="@string/type"
            app:layout_constraintStart_toStartOf="@+id/activityChildTitle"
            app:layout_constraintTop_toBottomOf="@+id/activityChildTitle" />

        <TextView
            android:id="@+id/activityDateTitle"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityItemMarginTop"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/activityTypeTitle"
            app:layout_constraintTop_toBottomOf="@+id/activityTypeTitle" />

        <TextView
            android:id="@+id/activityTimeTitle"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityItemMarginTop"
            android:fontFamily="@font/main2"
            android:text="@string/start_time"
            app:layout_constraintStart_toStartOf="@+id/activityDateTitle"
            app:layout_constraintTop_toBottomOf="@+id/activityDateTitle" />


        <TextView
            android:id="@+id/activityTypeDesc"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/activityChildDesc"
            app:layout_constraintTop_toTopOf="@+id/activityTypeTitle" />

        <TextView
            android:id="@+id/activityDateDesc"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main2"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/activityTypeDesc"
            app:layout_constraintTop_toTopOf="@+id/activityDateTitle" />

        <TextView
            android:id="@+id/activityTimeDesc"
            style="@style/activitiesListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/activityDateDesc"
            app:layout_constraintTop_toTopOf="@+id/activityTimeTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/others"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/activityTimeDesc"
            app:layout_constraintStart_toStartOf="@id/activityTimeTitle"
            app:layout_constraintTop_toBottomOf="@id/activityTimeTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>